[package]
name = "k8swatch"
version = "0.1.0"
authors = ["DerekStrickland <1111455+DerekStrickland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.35.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1.8"
k8s-openapi = "0.8.0"

[features]
test_v1_18 = ["k8s-openapi/v1_18"]